feat: Implementar envío de correos de prueba reales
- Se añadió la funcionalidad para enviar correos de prueba reales a un correo específico.
- Se creó la clase `PruebaEnvioWorker` para manejar el envío en un hilo separado.
- Se mejoró la interfaz de usuario en `pruebas_tab.py` para incluir opciones de carga de archivos y configuración de prueba.
- Se implementaron validaciones mejoradas para NITs y cédulas en `validator.py`.
- Se actualizaron las rutas de archivos en `config.json` para reflejar nuevas ubicaciones.

--- a/config.json
+++ b/config.json
@@ -31,7 +31,7 @@
     "theme": "light",
     "window_width": 1200,
     "window_height": 800,
-    "last_zip_path": "C:/Users/siste/Downloads/805025961 5.zip",
-    "last_excel_path": "C:/Users/siste/Downloads/CORREOS DE QUESOS LA FLORIDA 23-10-2025.xlsx"
+    "last_zip_path": "C:/Users/siste/Downloads/Pruebas Envio de Correos/CALI/805025961 5 (2).zip",
+    "last_excel_path": "C:/Users/siste/Downloads/Pruebas Envio de Correos/CALI/CORREOS DE QUESOS LA FLORIDA 23-10-2025 (1).xlsx"
   }
 }
