--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ openpyxl==3.1.2
 pandas==2.1.4
 numpy==1.26.4
 python-dotenv==1.0.0
-requests==2.31.0
+requests>=2.31.0
+packaging>=23.0
 cryptography==42.0.7
